--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-async-routing",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "This will be released shortly, please leave me any feedback on twitter!",
   "main": "dist/index.js",
   "directories": {
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "babel src --out-dir dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --config example/webpack.config.js"
   },
   "author": "Zach Silveira",
   "license": "ISC",
@@ -17,5 +17,17 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0"
+  },
+  "devDependencies": {
+    "babel-loader": "6.3.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-hot-loader": "3.0.0-beta.6",
+    "react-router": "4.0.0-beta.5",
+    "react-router-dom": "^4.0.0-beta.5",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   }
 }
