--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-router-async-routing",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "This will be released shortly, please leave me any feedback on twitter!",
   "main": "dist/index.js",
   "directories": {
@@ -25,8 +25,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-hot-loader": "3.0.0-beta.6",
-    "react-router": "4.0.0-beta.7",
-    "react-router-dom": "^4.0.0-beta.7",
+    "react-router": "4.0.0-beta.8",
+    "react-router-dom": "4.0.0-beta.8",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   }
